lemoncurry/static/lemoncurry/css/layout.styl
html
	background-color $base00

a
	color $base0D
	&:hover
		color $base0C

code, kbd, pre, samp, .code, .kbd, .pre, .samp
	font-family SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace

code, .code
	padding .2rem .4rem
	font-size 90%
	color $base0A
	background-color $base00
	border-radius .25rem

.form-control, .form-control:focus
	background-color $base01
	border-color $base00
	color $base07


[class^="openwebicons-"], [class*=" openwebicons-"]
	&::before
		text-decoration none
		line-height 1

body
	display flex
	flex-direction column
	min-height 100vh
	background-color transparent
	color $base07
	> header
		> .navbar
			background-color $base01
			#navbar
				justify-content space-between
		> .breadcrumbs
			background-color $base02
			> .breadcrumb
				background-color transparent
				border-radius 0
				flex-wrap nowrap
				.breadcrumb-item
					white-space nowrap
					&.active
						overflow-x hidden
						text-overflow ellipsis


	> main
		margin 2rem
		flex 1
		display flex

	> footer
		display flex
		justify-content space-evenly
		margin 1rem
		margin-top 0
		text-align center
		> p
			margin-right 1rem
			&:last-child
				margin-right 0

.card
	background-color $base02

	.card-footer
		background-color $base01
		&:nth-of-type(odd)
			background-color $base02

	&.h-card
		max-width 25rem
		position sticky
		top 1rem

		.p-note
			color $base04

		.profiles
			list-style none
			text-align center
			margin 0
			padding 0
			> li
				display inline-block
				margin-right 7px
				// Special handling for http://www.kevinmarks.com/distributed-verify.html
				> svg
					margin auto 5px

